Deploy automático via GitHub Actions para AWS

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ DB_PASS=postgres
 DB_NAME=nodejs_api_demo_dev
 DB_NAME_TEST=nodejs_api_demo_test
 DB_NAME_PROD=nodejs_api_demo_prod
-DB_HOST=127.0.0.1
+DB_HOST=nodejsapidemo-db.cyhu0qwqisro.us-east-1.rds.amazonaws.com
+DB_PORT=5432
 JWT_SECRET=supersecretjwtkey
 PORT=3000
